# superheroes-c

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  arm-build.sh  arm-toolchain.cmake  build.sh  ci.sh  cov.sh  create_docker_arm.sh  docker-compose.arm.yml  docker-compose.ceedling.yml  docker-compose.yml  gcovr-report.app.c.ae666658e8cf65a89d550d5b75f978c9.html  gcovr-report.html  gcovr-report.test_app.c.cdb84af5b08f7777cad0fe444f0365ff.html  gcovr-report.test_app_runner.c.1cd51e64c04301962d3934dd7e92089f.html  project.yml  run_docker_arm.sh  superheroes  test_data.csv  test_invalid_data.csv  test_overflow_data.csv
.github/workflows/: arm-cross-compile.yml  cmake_build.yml  code_coverage.yml
arm-build/: CMakeCache.txt  Makefile  cmake_install.cmake
arm-build/src/: Makefile  cmake_install.cmake
arm-build/src/Program/: Makefile  cmake_install.cmake
doc/: setupDebugger.md
src/: CMakeLists.txt  main.c
src/Program/: CMakeLists.txt  Makefile  app.c  app.h  main.c  main.h
test/: test_app.c  test_main.c
test/support/: sanitizer.yml
